syntax = "proto3";

package opsportal.deploysandbox.v1;

option go_package = "/protos;protos";

service DeploySandboxService {
  rpc DeploySandbox(DeploySandboxRequest) returns (DeploySandboxResponse);
}

message DeploySandboxRequest {
  string subscription_name = 1;
  repeated ServiceDetails service_details = 2;
}

message ServiceDetails {
  string service_name = 1;
  string image = 2;
}

message DeploySandboxResponse {
  
}

